# python-teaching-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflow/: build.yaml
.github/workflows/: build.yaml
workspace/: QWEN.md
workspace/.qwen/: settings.json
