[project]
name = "agent"
version = "0.1.0"
description = "agent for python study"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "pip>=25.3",
    "tqdm>=4.67.1",
    # Core jupyter dependencies
    "datalayer-pycrdt==0.12.17",
    "jupyter-collaboration>=4.1.1",
    "jupyter-mcp-server==0.19.0",
    "jupyterlab>=4",
    "notebook>=7",
    # Common data science dependencies
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "statsmodels>=0.14.5",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    # You can add more dependencies as needed, like:
    # "xgboost",
]

